--- a/UFAR.NM.API/appsettings.json
+++ b/UFAR.NM.API/appsettings.json
@@ -5,7 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+    // Allow all hosts to access the application
   "AllowedHosts": "*",
+    // Connection string for the InvitorsPortal database
   "ConnectionStrings": {
     "InvitorsPortal": "Server=.;Database=InvitorsPortalDb;Trusted_connection=True;TrustServerCertificate=True"
   }
